# dataclaw

./: .env.example  .env.integration.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pytest.ini  roadmap.md
backend/: .dockerignore  README.md  pyproject.toml
backend/app/: __init__.py  alembic.ini  cli.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0001_initial.py  0002_chat_persistence.py  0003_alert_approval.py  0004_app_settings.py  0005_logs_and_chat_archive.py  0006_agents_and_grants.py  0007_chat_chart_spec.py  0008_agent_write_audit.py  0009_wiki_pages.py  0010_knowledge_graph.py  0011_monitoring.py  0012_unified_agents.py  0013_runtime_foundation.py  0014_knowledge_node_source.py  0015_column_lineage_edges.py  0016_chat_retrieval_trace.py  (+3 more)
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  migrate.py  session.py
backend/app/models/: __init__.py  domain.py
backend/app/schemas/: api.py
backend/app/services/: demo_seed.py  llm_catalog.py  mcp_catalog.py  mcp_executor.py  mcp_servers.py  mcp_verify.py  settings_store.py  sql_safety.py  sync_materializer.py  vector_store.py
backend/app/worker/: __init__.py  main.py
backend/tests/: conftest.py  test_acme_coverage_selection.py  test_acme_coverage_shape.py  test_acme_report_aggregate.py  test_acme_seed_fivetran.py  test_acme_seed_manifest.py  test_agent_runtime.py  test_agents.py  test_alert_llm_filter.py  test_background_runner.py  test_chat_and_logs.py  test_chat_chart_spec.py  test_chat_openai_mcp_tools.py  test_chunker.py  test_cli_catalog_commands.py  test_cli_migrate_env.py  test_cli_rotate_master_key.py  test_cloud_fixture_catalog.py  test_compile_service.py  test_connector_catalog.py  test_connector_errors.py  test_connectors_real.py  test_custom_agent_create.py  test_fetchers.py  test_ingestion_service.py  test_knowledge_endpoints.py  test_mcp_airbyte_tools.py  test_mcp_airflow_tools.py  test_mcp_bigquery_tools.py  test_mcp_catalog_verify.py  test_mcp_confluence_tools.py  test_mcp_dagster_tools.py  test_mcp_databricks_tools.py  test_mcp_datastore_tools.py  test_mcp_datastore_urls.py  test_mcp_dbt_tools.py  test_mcp_fivetran_tools.py  test_mcp_github_tools.py  test_mcp_google_docs_tools.py  test_mcp_grants.py  (+18 more)
backend/tests/e2e/: test_full_flow.py  test_openai_real_chat.py
backend/tests/integration/: test_connectors_integration.py  test_e2e_chat_agent.py  test_e2e_knowledge.py  test_e2e_v0.py  test_e2e_v01.py
backend/tests/support/: http_fixture_replay.py
(+196 files in other folders)
