[project]
name = "dataclaw-platform"
version = "0.1.0"
description = "DataClaw - self-hosted AI-native data platform with explicit MCP grants"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
  "aiomysql>=0.2.0",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.3",
  "apscheduler>=3.10.4",
  "bcrypt>=4.2.0",
  "chromadb>=0.5.23",
  "cryptography>=43.0.1",
  "fastapi>=0.115.0",
  "greenlet>=3.1.1",
  "httpx>=0.27.2",
  "mcp>=1.2.0",
  "openai>=1.51.0",
  "psycopg[binary]>=3.2.0",
  "pymssql>=2.3.2",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "sqlalchemy[asyncio]>=2.0.35",
  "uvicorn[standard]>=0.30.6",
  "trino[sqlalchemy]>=0.336.0",
  "google-cloud-bigquery>=3.20",
  "snowflake-connector-python>=3.7",
  "databricks-sql-connector>=3.4",
  "notion-client>=2.3.0",
  "PyGithub>=2.5.0",
  "atlassian-python-api>=3.41.16",
  "redshift-connector>=2.1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-json-report>=1.5.0",
  "pytest-timeout>=2.3.1",
  "PyYAML>=6.0.2",
  "respx>=0.21.0",
  "ruff>=0.6.9"
]
embeddings = []
local-embeddings = ["sentence-transformers>=3.3.1"]
snowflake = ["snowflake-connector-python>=3.7"]
bigquery = ["google-cloud-bigquery>=3.20"]
databricks = ["databricks-sql-connector>=3.4"]
google = ["google-api-python-client>=2.150", "google-auth>=2.35"]
all-connectors = [
  "snowflake-connector-python>=3.7",
  "google-cloud-bigquery>=3.20",
  "databricks-sql-connector>=3.4",
  "google-api-python-client>=2.150",
  "google-auth>=2.35",
  "notion-client>=2.3.0",
  "PyGithub>=2.5.0",
  "atlassian-python-api>=3.41.16",
  "redshift-connector>=2.1.3"
]

[project.scripts]
dataclaw = "app.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that exercise live connector services or SaaS credentials",
  "e2e: end-to-end tests that boot the app via ASGI and exercise the full flow",
  "runslow: release-gate tests that require live services and explicit --runslow"
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[tool.setuptools.package-data]
app = [
  "static/**/*",
  "alembic.ini",
  "alembic/env.py",
  "alembic/versions/*.py",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["app/alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]
